// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`渲染测试 双波浪线在开头 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      <del>
        Hi
      </del>
      Hello
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;

exports[`渲染测试 禁用了单波浪删除线语法，但支持双波浪删除线 1`] = `
<DocumentFragment>
  <div
    class="container flow-markdown-body theme-default"
    data-show-indicator="false"
    dir="ltr"
    theme-mode="light"
  >
    <div
      class="auto-hide-last-sibling-br paragraph paragraph-element br-paragraph-space"
    >
      prefix 
      <del>
        Hi
      </del>
      Hello, ~there~world!
    </div>
    <br
      class="container wrapper non-select"
    />
    

  </div>
</DocumentFragment>
`;
